fix: Fix redis for local
