# swagger-output.json
@@ -5,9 +5,11 @@
     "description": "API Documentation for FMilk Web",
     "version": "1.0.0"
   },
-  "host": "fmilk-server.onrender.com",
+  "host": "localhost:8000",
   "basePath": "/api/v1",
-  "schemes": ["https"],
+  "schemes": [
+    "http"
+  ],
   "securityDefinitions": {
     "BearerAuth": {
       "type": "apiKey",
@@ -19,8 +21,14 @@
   "paths": {
     "/auth/infoUser": {
       "get": {
-        "tags": ["Auth"],
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -36,7 +44,6 @@
     },
     "/auth/register": {
       "post": {
-        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -82,7 +89,6 @@
     },
     "/auth/login": {
       "post": {
-        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -119,7 +125,6 @@
     },
     "/auth/refresh": {
       "post": {
-        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -147,18 +152,17 @@
     },
     "/user/": {
       "get": {
-        "tags": ["User"],
         "description": "",
         "parameters": [
           {
             "name": "page",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "pageSize",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "name",
@@ -181,15 +185,14 @@
           "403": {
             "description": "Forbidden"
           },
-          "404": {
-            "description": "Not Found"
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/user/{id}": {
       "get": {
-        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -215,7 +218,6 @@
         }
       },
       "delete": {
-        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -241,7 +243,6 @@
         }
       },
       "put": {
-        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -266,7 +267,7 @@
                   "example": "any"
                 },
                 "dob": {
-                  "example": "2024-07-07"
+                  "example": "any"
                 }
               }
             }
@@ -279,9 +280,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "403": {
             "description": "Forbidden"
           }
@@ -290,9 +288,13 @@
     },
     "/user/personal-information": {
       "put": {
-        "tags": ["User"],
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -309,7 +311,7 @@
                   "example": "any"
                 },
                 "dob": {
-                  "example": "2024-07-07"
+                  "example": "any"
                 }
               }
             }
@@ -330,9 +332,13 @@
     },
     "/user/change-password": {
       "put": {
-        "tags": ["User"],
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -350,6 +356,9 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "400": {
             "description": "Bad Request"
           },
@@ -364,7 +373,6 @@
     },
     "/user/status/{id}": {
       "patch": {
-        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -404,26 +412,35 @@
     },
     "/product/": {
       "get": {
-        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
             "name": "page",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "pageSize",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
-            "name": "productName",
+            "name": "name",
             "in": "query",
             "type": "string"
           },
           {
             "name": "origin",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "minPrice",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "maxPrice",
             "in": "query",
             "type": "string"
           }
@@ -443,7 +460,6 @@
     },
     "/product/{id}": {
       "get": {
-        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -466,7 +482,6 @@
         }
       },
       "delete": {
-        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -492,7 +507,6 @@
         }
       },
       "put": {
-        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -517,12 +531,9 @@
                   "example": "any"
                 },
                 "quantity": {
-                  "example": 10
+                  "example": "any"
                 },
                 "price": {
-                  "example": 10
-                },
-                "origin": {
                   "example": "any"
                 },
                 "brand": {
@@ -547,7 +558,6 @@
     },
     "/product/create": {
       "post": {
-        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -560,21 +570,18 @@
                   "example": "any"
                 },
                 "expireDate": {
-                  "example": "2024-07-07"
+                  "example": "any"
                 },
                 "quantity": {
-                  "example": 10
+                  "example": "any"
                 },
                 "price": {
-                  "example": 10
+                  "example": "any"
                 },
                 "image": {
                   "example": "any"
                 },
                 "description": {
-                  "example": "any"
-                },
-                "origin": {
                   "example": "any"
                 },
                 "brand": {
@@ -599,7 +606,6 @@
     },
     "/product/{productId}/comment": {
       "post": {
-        "tags": ["Comment"],
         "description": "",
         "parameters": [
           {
@@ -642,7 +648,6 @@
     },
     "/product/{productId}/comment/{commentId}": {
       "delete": {
-        "tags": ["Comment"],
         "description": "",
         "parameters": [
           {
@@ -655,6 +660,11 @@
             "name": "commentId",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -677,7 +687,6 @@
         }
       },
       "put": {
-        "tags": ["Comment"],
         "description": "",
         "parameters": [
           {
@@ -690,6 +699,11 @@
             "name": "commentId",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           },
           {
@@ -729,21 +743,25 @@
     },
     "/brand/": {
       "get": {
-        "tags": ["Brand"],
         "description": "",
         "parameters": [
           {
             "name": "page",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "pageSize",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "brandName",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "origin",
             "in": "query",
             "type": "string"
           }
@@ -763,7 +781,6 @@
     },
     "/brand/{id}": {
       "get": {
-        "tags": ["Brand"],
         "description": "",
         "parameters": [
           {
@@ -780,13 +797,15 @@
           "400": {
             "description": "Bad Request"
           },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Not Found"
           }
         }
       },
       "delete": {
-        "tags": ["Brand"],
         "description": "",
         "parameters": [
           {
@@ -812,7 +831,6 @@
         }
       },
       "put": {
-        "tags": ["Brand"],
         "description": "",
         "parameters": [
           {
@@ -828,6 +846,9 @@
               "type": "object",
               "properties": {
                 "brandName": {
+                  "example": "any"
+                },
+                "origin": {
                   "example": "any"
                 }
               }
@@ -849,7 +870,6 @@
     },
     "/brand/create": {
       "post": {
-        "tags": ["Brand"],
         "description": "",
         "parameters": [
           {
@@ -859,6 +879,9 @@
               "type": "object",
               "properties": {
                 "brandName": {
+                  "example": "any"
+                },
+                "origin": {
                   "example": "any"
                 }
               }
@@ -880,18 +903,17 @@
     },
     "/post/": {
       "get": {
-        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
             "name": "page",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "pageSize",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "title",
@@ -914,7 +936,6 @@
     },
     "/post/{id}": {
       "get": {
-        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -937,7 +958,6 @@
         }
       },
       "put": {
-        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -981,7 +1001,6 @@
         }
       },
       "delete": {
-        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -1009,7 +1028,6 @@
     },
     "/post/create": {
       "post": {
-        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -1018,7 +1036,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "productId": {
+                "product": {
                   "example": "any"
                 },
                 "title": {
@@ -1049,7 +1067,6 @@
     },
     "/order/vnpay_return": {
       "get": {
-        "tags": ["Order"],
         "description": "",
         "responses": {
           "default": {
@@ -1060,18 +1077,17 @@
     },
     "/order/getByUser": {
       "get": {
-        "tags": ["Order"],
         "description": "",
         "parameters": [
           {
             "name": "page",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "pageSize",
             "in": "query",
-            "type": "number"
+            "type": "string"
           }
         ],
         "responses": {
@@ -1092,28 +1108,27 @@
     },
     "/order/": {
       "get": {
-        "tags": ["Order"],
         "description": "",
         "parameters": [
           {
             "name": "page",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "pageSize",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "minPrice",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "maxPrice",
             "in": "query",
-            "type": "number"
+            "type": "string"
           },
           {
             "name": "status",
@@ -1144,7 +1159,6 @@
     },
     "/order/{id}": {
       "get": {
-        "tags": ["Order"],
         "description": "",
         "parameters": [
           {
@@ -1172,62 +1186,44 @@
     },
     "/order/create": {
       "post": {
-        "tags": ["Order"],
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "x-forwarded-for",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "transferAddress": {
-                  "type": "object",
-                  "properties": {
-                    "name": {
-                      "type": "string",
-                      "example": "any"
-                    },
-                    "address": {
-                      "type": "string",
-                      "example": "any"
-                    },
-                    "phone": {
-                      "type": "string",
-                      "example": "any"
-                    }
-                  }
-                },
                 "orderProducts": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "amount": {
-                        "type": "number",
-                        "example": 10
-                      },
-                      "productId": {
-                        "type": "string",
-                        "example": "any"
-                      }
-                    }
-                  }
+                  "example": "any"
                 },
                 "userId": {
-                  "example": null
+                  "example": "any"
                 },
                 "paymentMethod": {
                   "example": "any"
                 },
                 "itemsPrice": {
-                  "example": 10
+                  "example": "any"
                 },
                 "transferPrice": {
-                  "example": 10
+                  "example": "any"
                 },
                 "totalPrice": {
-                  "example": 10
+                  "example": "any"
+                },
+                "transferAddress": {
+                  "example": "any"
                 }
               }
             }
@@ -1251,7 +1247,6 @@
     },
     "/order/{orderId}/status": {
       "put": {
-        "tags": ["Order"],
         "description": "",
         "parameters": [
           {
@@ -1293,7 +1288,14 @@
   "definitions": {
     "User": {
       "title": "user",
-      "required": ["username", "name", "phone", "email", "address", "password"],
+      "required": [
+        "username",
+        "name",
+        "phone",
+        "email",
+        "address",
+        "password"
+      ],
       "properties": {
         "username": {
           "type": "string"
@@ -1397,7 +1399,10 @@
         },
         "status": {
           "type": "string",
-          "enum": ["AVAILABLE", "EXPIRE"]
+          "enum": [
+            "AVAILABLE",
+            "EXPIRE"
+          ]
         },
         "brand": {
           "type": "schemaobjectid"
@@ -1417,7 +1422,11 @@
     },
     "Post": {
       "title": "post",
-      "required": ["title", "product", "image"],
+      "required": [
+        "title",
+        "product",
+        "image"
+      ],
       "properties": {
         "title": {
           "type": "string"
@@ -1447,7 +1456,10 @@
     },
     "Brand": {
       "title": "brand",
-      "required": ["brandName", "origin"],
+      "required": [
+        "brandName",
+        "origin"
+      ],
       "properties": {
         "brandName": {
           "type": "string"
@@ -1498,7 +1510,13 @@
                 "type": "schemaobjectid"
               }
             },
-            "required": ["name", "image", "amount", "price", "productId"]
+            "required": [
+              "name",
+              "image",
+              "amount",
+              "price",
+              "productId"
+            ]
           }
         },
         "userId": {
@@ -1532,7 +1550,11 @@
         },
         "status": {
           "type": "string",
-          "enum": ["PENDING", "DELIVERING", "DELIVERED"]
+          "enum": [
+            "PENDING",
+            "DELIVERING",
+            "DELIVERED"
+          ]
         },
         "isPaid": {
           "type": "boolean"
